--- a/config/database.yml
+++ b/config/database.yml
@@ -81,5 +81,5 @@ test:
 production:
   <<: *default
   database: tyb_demo_app_production
-  username: tyb_demo_app
+  username: dev
   password: <%= ENV['TYB_DEMO_APP_DATABASE_PASSWORD'] %>
